Criado a página index

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <h1>Lista de tarefas digital</h1>
+    <div class="conteudo">
+        <div class="lado-esquerdo">
+            <img src="/static/img/imagem-inicial.jpg" alt="Copo de café e lista de tarefas">
+        </div>
+        <div class="lado-direito">
+            <a class="botao" href="/login">Já tenho uma conta</a>
+            <a class="botao" href="/cadastro">Não tenho uma conta</a>
+        </div>
+    </div>
 </body>
 </html>
