finalizamos o estilo da página inicial

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Tarefas</title>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
+
 <body>
-    <h1>Lista de tarefas digital</h1>
+    <h1>Lista de Tarefas</h1>
     <div class="conteudo">
         <div class="lado-esquerdo">
             <img src="/static/img/imagem-inicial.jpg" alt="Copo de café e lista de tarefas">
