--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Cadastro</h1>
+
+    <form action="/cadastro" method="POST">
+        <label></label>
+    </form>
+
 </body>
 </html>
