--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -8,10 +8,23 @@
 </head>
 <body>
     <h1>Cadastro</h1>
-
-    <form action="/cadastro" method="POST">
-        <label></label>
-    </form>
+    <div class="formulario">
+        <form action="/cadastro" method="POST">
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" required>
+            <br>
+            <label for="email">E-mail</label>
+            <input type="text" id="email" name="email" required>
+            <br>
+            <label for="senha">Senha</label>
+            <input type="password" id="senha" name="senha" required>
+            <br>
+            <label for="senhaconfirmacao">Confirme sua senha</label>
+            <input type="password" id="senhaconfirmacao" name="senhaconfirmacao" required>
+            <br>
+            <button type="submit" class="btn">Cadastrar</button>
+        </form>
+    </div>
 
 </body>
 </html>
