--- a/templates/login.html
+++ b/templates/login.html
@@ -7,5 +7,24 @@
 </head>
 <body>
     <h1>Login</h1>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
+    <div class="formulario">
+        <form action="/login" method="POST">
+            <label for="email">E-mail</label>
+            <input type="text" id="email" name="email" required>
+            <br>
+            <label for="senha">Senha</label>
+            <input type="password" id="senha" name="senha" required>
+           
+            <button type="submit" class="btn">Entrar</button>
+        </form>
+    </div>
 </body>
 </html>
