--- a/static/styles.css
+++ b/static/styles.css
@@ -18,12 +18,17 @@ img {
 
 div.lado-esquerdo {
     width: 50%; /*Define a largura do lado esquerdo como 50%*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 div.lado-direito {
     width: 50%; /*Define a largura do lado direito como 50%*/
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 div.conteudo {
