--- a/templates/lista.html
+++ b/templates/lista.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista de Tarefas</title>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <h1>Lista</h1>
+    <h1>Minha lista de tarefas</h1>
+    <div class="formulario">
+        <form action="/criar_tarefa" method="POST">
+            <input type="text" id="conteudo"
+            name="conteudo" placeholder="O que precisa ser feito?" required>
+            <button type="submit" class="btn">Adicionar tarefa</button>
+        </form>
+    </div>
+    {% for tarefa in tarefas %}
+        <p>{{ tarefa }}</p>
+        <p>{{ tarefa[0] }}</p>
+        <p>{{ tarefa[1] }}</p>
+        <p>{{ tarefa[2] }}</p>
+        <hr>
+    {% endfor %}
 </body>
 </html>
