--- a/templates/lista.html
+++ b/templates/lista.html
@@ -26,8 +26,8 @@
         </label>
         <input type="button"
             onclick="window.location.href='/tarefas/excluir/{{ tarefa[0] }}'" value="Excluir">
-        <!-- <input type="button"
-        onclick="window.location.href='/tarefas/editar/{{ tarefa[0] }}'" value="Editar"> -->
+        <input type="button"
+        onclick="window.location.href='/tarefas/editar/{{ tarefa[0] }}'" value="Editar">
         <hr>
     {% endfor %}
 
